Add Animal Block Blast - cute animal themed Block Blast clone

--- a/prototypes/index.html
+++ b/prototypes/index.html
@@ -30,6 +30,7 @@ footer{text-align:center;color:#555;margin-top:40px;padding:20px;font-size:12px}
   <a class="card" href="tower-defense/"><div class="icon">🏰</div><div class="name">타워 디펜스</div><div class="desc">S자 경로 타워 배치</div><div class="tags"><span class="tag">전략</span><span class="tag">디펜스</span></div></a>
   <a class="card" href="bullet-hell/"><div class="icon">💥</div><div class="name">총알 지옥</div><div class="desc">보스 러쉬 탄막 슈팅</div><div class="tags"><span class="tag">액션</span><span class="tag">슈팅</span></div></a>
   <a class="card" href="idle-factory/"><div class="icon">🏭</div><div class="name">아이들 팩토리</div><div class="desc">자원 생산 & 공장 경영</div><div class="tags"><span class="tag">방치형</span><span class="tag">경영</span></div></a>
+  <a class="card" href="animal-block-blast/"><div class="icon">🐰</div><div class="name">애니멀 블록 블라스트</div><div class="desc">귀여운 동물 블록 퍼즐</div><div class="tags"><span class="tag">퍼즐</span><span class="tag">블록</span></div></a>
 </div>
 
 <h2>퍼즐 & 실험</h2>
